src/objects/Product_Qualification_Level__c.object
<CustomObject>
    <description>R4 Product Qualification Level</description>
    <fields>
        <fullName>Customer_Pilot_Installation_Start_Date__c</fullName>
        <description>R4 Customer Pilot Installation Start Date</description>
        <label>Customer Pilot Installation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setExecution1__c</fullName>
        <description>R4 - Step 1 Qualification in progress –Execution 1</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setExecution2__c</fullName>
        <description>R4 - Step 2 Qualification in progress – Execution</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setExecution3__c</fullName>
        <description>R4 - Step 3 Qualification in progress – Planning</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setPlanning1__c</fullName>
        <description>R4 Date_when_Step_is_setPlanning1</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setPlanning2__c</fullName>
        <description>R4 Date_when_Step_is_setPlanning2</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setPlanning3__c</fullName>
        <description>R4 Date_when_Step_is_setPlanning3</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setQualified1__c</fullName>
        <description>R4 - Date_when_Step_is_setQualified1</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setQualified2__c</fullName>
        <description>R4 - Date_when_Step_is_setQualified2</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setStep1NQual__c</fullName>
        <description>R4 Date_when_Step_is_setStep1NQual</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setStep2NQual__c</fullName>
        <description>R4 Date_when_Step_is_setStep2NQual__c</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setSubmitted1__c</fullName>
        <description>R4 - Date when Step is set Submitted 1</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Step_is_setSubmitted2__c</fullName>
        <description>R4 - Qualification in progress – Submitted2</description>
        <label>Date when Step is set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>R4 End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiative_Status__c</fullName>
        <description>R4 Initiative Status</description>
        <formula>Text( Product_Qualification__r.Initiative_Status__c )</formula>
        <label>Initiative Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Date__c</fullName>
        <description>R4 Hidden Level Date</description>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Level Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option1_NQual__c</fullName>
        <description>R4 Option1_NQual</description>
        <label>Option 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option2_NQual__c</fullName>
        <description>R4 Option2_NQual</description>
        <label>Option 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_1Execution__c</fullName>
        <description>R4 - Step 1 Qualification in progress – Execution</description>
        <label>Option 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_1Planning__c</fullName>
        <description>R3 - Step 1 Qualification in progress – Planning</description>
        <label>Option 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_1Qualified1__c</fullName>
        <description>R4 - Option_1Qualified</description>
        <label>Option 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_1Submitted__c</fullName>
        <description>R4 - Qualification in progress – Submitted</description>
        <label>Option 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_2Execution__c</fullName>
        <description>R4 - Step 2 Qualification in progress – Execution</description>
        <label>Option 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_2Planning__c</fullName>
        <description>R3 - Step 2 Qualification in progress – Planning</description>
        <label>Option 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_2Qualified2__c</fullName>
        <description>R4 - Option_2Qualified</description>
        <label>Option 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_2Submitted__c</fullName>
        <description>R4 - Qualification in progress – Submitted</description>
        <label>Option 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_3Execution__c</fullName>
        <description>R4 - Step 3 Qualification in progress – Execution</description>
        <label>Option 3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_3Planning__c</fullName>
        <description>R4 - Step 3 Qualification in progress – Planning</description>
        <label>Option 3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Qualification_Level_2__c</fullName>
        <description>R4 Product Qualification - Level</description>
        <label>Product Qualification - Level</label>
        <picklist>
            <picklistValues>
                <fullName>-3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Qualification_Level__c</fullName>
        <description>R4 Product Qualification Level</description>
        <label>Product Qualification Level</label>
        <picklist>
            <picklistValues>
                <fullName>Product not qualified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification in progress – Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification in progress – Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification in progress – Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Qualified Supplier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Qualification__c</fullName>
        <description>R4 Product Qualification</description>
        <label>Product Qualification</label>
        <referenceTo>Product_Qualification__c</referenceTo>
        <relationshipLabel>Product Qualification Level</relationshipLabel>
        <relationshipName>Product_Qualification_Levels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarter_1__c</fullName>
        <description>R4 Quarter 1 field hold the product qualification level value</description>
        <label>Quarter 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_2__c</fullName>
        <description>R4 Quarter 2 field hold the product qualification level value</description>
        <label>Quarter 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_3__c</fullName>
        <description>R4 Quarter 3 field hold the product qualification level value</description>
        <label>Quarter 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step1_NQual__c</fullName>
        <defaultValue>$Label.PQL_Step1_NQual</defaultValue>
        <description>R4 Step 1</description>
        <label>Step 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step2_NQual__c</fullName>
        <defaultValue>$Label.PQL_Step2_NQual</defaultValue>
        <description>R4 Step2_NQual</description>
        <label>Step 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_1Execution__c</fullName>
        <defaultValue>$Label.PQL_Step_1Execution</defaultValue>
        <description>R4 Step_1Execution</description>
        <label>Step 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_1Planning__c</fullName>
        <defaultValue>$Label.PQL_Step_1Planning</defaultValue>
        <description>R4 Step_1Planning</description>
        <label>Step 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_1Qualified1__c</fullName>
        <defaultValue>$Label.PQL_Step_1Qualified1</defaultValue>
        <description>R 4- Step 1 Product qualified</description>
        <label>Step 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_1Submitted__c</fullName>
        <defaultValue>$Label.PQL_Step_1Submitted</defaultValue>
        <description>R4 Step 1 Qualification in progress – Submitted</description>
        <label>Step 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_2Execution__c</fullName>
        <defaultValue>$Label.PQL_Step_2Execution</defaultValue>
        <description>R4 - Step 2 Qualification in progress – Execution</description>
        <label>Step 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_2Planning__c</fullName>
        <defaultValue>$Label.PQL_Step_2Planning</defaultValue>
        <label>Step 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_2Qualified2__c</fullName>
        <defaultValue>$Label.PQL_Step_2Qualified2</defaultValue>
        <description>R4 - Step 2 Product qualified</description>
        <label>Step 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_2__c</fullName>
        <defaultValue>$Label.PQL_Step_2</defaultValue>
        <description>R4 - Qualification in progress – Submitted Step_2 Submitted</description>
        <label>Step 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_3Execution__c</fullName>
        <defaultValue>$Label.PQL_Step_3Execution</defaultValue>
        <description>R4 - Step 2 Qualification in progress – Execution</description>
        <label>Step 3</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_3Planning__c</fullName>
        <defaultValue>$Label.PQL_Step_3Planning</defaultValue>
        <description>R4 Step_3Planning</description>
        <label>Step 3</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Last_Modified_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>R4 Test Last Modified Date</description>
        <label>Test Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YQ1__c</fullName>
        <description>Displays last modified Year and month into the quarter1  field</description>
        <label>YQ1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YQ2__c</fullName>
        <description>Displays last modified Year and month into the quarter2  field</description>
        <label>YQ2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YQ3__c</fullName>
        <description>Displays last modified Year and month into the quarter3  field</description>
        <label>YQ3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Qualification Level</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QUES-{0000}</displayFormat>
        <label>Questionaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Qualification Levels</pluralLabel>
    <recordTypes>
        <fullName>Product_Qualification_Level</fullName>
        <active>true</active>
        <description>R4 Product_Qualification_Level Record Type</description>
        <label>Product Qualification Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Qualification_Level_Closed</fullName>
        <active>true</active>
        <description>R4 Product_Qualification_Level_Closed Record Type</description>
        <label>Product Qualification Level Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Qualification_Level_Closed_NQ</fullName>
        <active>true</active>
        <description>R4 Product Qualification Level Closed NQ Layout</description>
        <label>Product Qualification Level Closed NQ</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Values_cannot_be_Past_Date</fullName>
        <active>true</active>
        <description>R4 Check the Date value cannot be entered as a past date</description>
        <errorConditionFormula>OR(AND(NOT(ISNULL(Customer_Pilot_Installation_Start_Date__c)), Customer_Pilot_Installation_Start_Date__c &lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(End_Date__c)), End_Date__c &lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setStep1NQual__c)), Date_when_Step_is_setStep1NQual__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setStep2NQual__c)), Date_when_Step_is_setStep2NQual__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setExecution1__c)), Date_when_Step_is_setExecution1__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setExecution2__c)), Date_when_Step_is_setExecution2__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setExecution3__c)), Date_when_Step_is_setExecution3__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setExecution4__c)), Date_when_Step_is_setExecution4__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setExecution5__c)), Date_when_Step_is_setExecution5__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setPlanning1__c)), Date_when_Step_is_setPlanning1__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setPlanning2__c)), Date_when_Step_is_setPlanning2__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setPlanning3__c)), Date_when_Step_is_setPlanning3__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setPlanning4__c)), Date_when_Step_is_setPlanning4__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setQualified1__c)), Date_when_Step_is_setQualified1__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setQualified2__c)), Date_when_Step_is_setQualified2__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setSubmitted1__c)), Date_when_Step_is_setSubmitted1__c&lt; Product_Qualification__r.Startdate__c),
AND(NOT(ISNULL(Date_when_Step_is_setSubmitted2__c)), Date_when_Step_is_setSubmitted2__c&lt; Product_Qualification__r.Startdate__c))</errorConditionFormula>
        <errorMessage>Date values cannot be before the Product Qualification Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Options_None_Value_Check</fullName>
        <active>false</active>
        <description>R4 Validation Rule not to allow the user to choose “none” option to the previous questions, if they are already answered to some of the product qualification levels</description>
        <errorConditionFormula>AND(ISCHANGED(Option1_NQual__c), ISPICKVAL(Option1_NQual__c , &quot;&quot;))||
AND(ISCHANGED(Option2_NQual__c), ISPICKVAL(Option2_NQual__c, &quot;&quot;))||
AND(ISCHANGED(Option_1Planning__c), ISPICKVAL(Option_1Planning__c, &quot;&quot;))||
AND(ISCHANGED(Option_2Planning__c), ISPICKVAL(Option_2Planning__c , &quot;&quot;))||
AND(ISCHANGED(Option_3Planning__c), ISPICKVAL(Option_3Planning__c , &quot;&quot;))||
AND(ISCHANGED(Option_4Planning__c), ISPICKVAL(Option_4Planning__c, &quot;&quot;))||
AND(ISCHANGED(Option_1Execution__c), ISPICKVAL(Option_1Execution__c, &quot;&quot;))||
AND(ISCHANGED(Option_2Execution__c), ISPICKVAL(Option_2Execution__c , &quot;&quot;))||
AND(ISCHANGED(Option_3Execution__c), ISPICKVAL(Option_3Execution__c , &quot;&quot;))||
AND(ISCHANGED(Option_4Execution__c), ISPICKVAL(Option_4Execution__c, &quot;&quot;))||
AND(ISCHANGED(Option_5Execution__c), ISPICKVAL(Option_5Execution__c, &quot;&quot;))||
AND(ISCHANGED(Option_1Submitted__c), ISPICKVAL(Option_1Submitted__c, &quot;&quot;))||
AND(ISCHANGED(Option_2Submitted__c), ISPICKVAL(Option_2Submitted__c , &quot;&quot;))||
AND(ISCHANGED(Option_1Qualified1__c), ISPICKVAL(Option_1Qualified1__c, &quot;&quot;))||
AND(ISCHANGED(Option_2Qualified2__c), ISPICKVAL(Option_2Qualified2__c, &quot;&quot;))</errorConditionFormula>
        <errorMessage>Please answer the questionnaire. Cannot change the value to None.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_qualified_Yes_Value_Check</fullName>
        <active>true</active>
        <description>R4 Check the value of Date when Step is setSubmitted1  &amp; Date when Step is setSubmitted2 if the value for Option_1Submitted   &amp; Option_2Submitted is Yes</description>
        <errorConditionFormula>AND( 
AND( 
ISPICKVAL( Option_1Submitted__c, &quot;Yes&quot;), 
ISPICKVAL( Option_2Submitted__c, &quot;Yes&quot;)), 
OR( 
ISBLANK(Date_when_Step_is_setSubmitted1__c), 
ISBLANK(Date_when_Step_is_setSubmitted2__c)))</errorConditionFormula>
        <errorMessage>Please answer the Product qualified dates In order to save. Please make sure all the Date fields are filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QualfInProgress_Execution_Check</fullName>
        <active>true</active>
        <description>R4 Validation for Qualification in progress – Execution check</description>
        <errorConditionFormula>AND( 
OR( 
NOT(ISPICKVAL( Option_1Execution__c, &quot;&quot;)), 
NOT(ISPICKVAL( Option_2Execution__c, &quot;&quot;)), 
NOT(ISPICKVAL( Option_3Execution__c, &quot;&quot;)), 
NOT(ISPICKVAL( Option_4Execution__c, &quot;&quot;)),
NOT(ISPICKVAL( Option_5Execution__c, &quot;&quot;))), 
OR( 
ISBLANK(Date_when_Step_is_setStep1NQual__c), 
ISBLANK(Date_when_Step_is_setStep2NQual__c),
ISBLANK(Date_when_Step_is_setPlanning1__c),
ISBLANK(Date_when_Step_is_setPlanning2__c),
ISBLANK(Date_when_Step_is_setPlanning3__c),
ISBLANK(Date_when_Step_is_setPlanning4__c), 
ISBLANK(TEXT(Option1_NQual__c)), 
ISBLANK(TEXT(Option2_NQual__c)),
ISBLANK(TEXT(Option_1Planning__c)),
ISBLANK(TEXT(Option_2Planning__c)),
ISBLANK(TEXT(Option_3Planning__c)),
ISBLANK(TEXT(Option_4Planning__c))))</errorConditionFormula>
        <errorMessage>Please answer the Previous section questionnaire In order to save. Please make sure all  the Date fields are filled in Previous sections.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QualfInProgress_Planning_Check</fullName>
        <active>true</active>
        <description>R4 Validation for Qualification in progress – Planning check</description>
        <errorConditionFormula>AND( 
OR( 
NOT(ISPICKVAL( Option_1Planning__c, &quot;&quot;)), 
NOT(ISPICKVAL( Option_2Planning__c, &quot;&quot;)),
NOT(ISPICKVAL( Option_3Planning__c, &quot;&quot;)), 
NOT(ISPICKVAL( Option_4Planning__c, &quot;&quot;))), 
OR( 
ISBLANK(Date_when_Step_is_setStep1NQual__c), 
ISBLANK(Date_when_Step_is_setStep2NQual__c), 
ISBLANK(TEXT(Option1_NQual__c)), 
ISBLANK(TEXT(Option2_NQual__c))))</errorConditionFormula>
        <errorMessage>Please answer the Previous section questionnaire In order to save. Please make sure all  the Date fields are filled in Previous sections.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QualfInProgress_Qualified_Check</fullName>
        <active>true</active>
        <description>R4 Validation for Qualification in progress – Qualified check</description>
        <errorConditionFormula>AND( 
OR( 
NOT(ISPICKVAL(Option_1Qualified1__c, &quot;&quot;)), 
NOT(ISPICKVAL( Option_2Qualified2__c, &quot;&quot;))), 
OR( 
ISBLANK(Date_when_Step_is_setStep1NQual__c), 
ISBLANK(Date_when_Step_is_setStep2NQual__c), 
ISBLANK(Date_when_Step_is_setPlanning1__c), 
ISBLANK(Date_when_Step_is_setPlanning2__c), 
ISBLANK(Date_when_Step_is_setPlanning3__c), 
ISBLANK(Date_when_Step_is_setPlanning4__c), 
ISBLANK(Date_when_Step_is_setExecution1__c), 
ISBLANK(Date_when_Step_is_setExecution2__c), 
ISBLANK(Date_when_Step_is_setExecution3__c), 
ISBLANK(Date_when_Step_is_setExecution4__c), 
ISBLANK(Date_when_Step_is_setExecution5__c), 
ISBLANK(Date_when_Step_is_setSubmitted1__c), 
ISBLANK(Date_when_Step_is_setSubmitted2__c), 
ISBLANK(TEXT(Option1_NQual__c)), 
ISBLANK(TEXT(Option2_NQual__c)), 
ISBLANK(TEXT(Option_1Planning__c)), 
ISBLANK(TEXT(Option_2Planning__c)), 
ISBLANK(TEXT(Option_3Planning__c)), 
ISBLANK(TEXT(Option_4Planning__c)),
ISBLANK(TEXT(Option_1Execution__c)), 
ISBLANK(TEXT(Option_2Execution__c)), 
ISBLANK(TEXT(Option_3Execution__c)), 
ISBLANK(TEXT(Option_4Execution__c)), 
ISBLANK(TEXT(Option_5Execution__c)), 
ISBLANK(TEXT(Option_1Submitted__c)),
ISBLANK(TEXT(Option_2Submitted__c))
))</errorConditionFormula>
        <errorMessage>Please answer the Previous section questionnaire In order to save. Please make sure all  the Date fields are filled in Previous sections.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QualfInProgress_Submitted_Check</fullName>
        <active>true</active>
        <description>R4 Validation for Qualification in progress – Submitted check</description>
        <errorConditionFormula>AND( 
OR( 
NOT(ISPICKVAL( Option_1Submitted__c, &quot;&quot;)), 
NOT(ISPICKVAL( Option_2Submitted__c, &quot;&quot;))), 
OR( 
ISBLANK(Date_when_Step_is_setStep1NQual__c), 
ISBLANK(Date_when_Step_is_setStep2NQual__c), 
ISBLANK(Date_when_Step_is_setPlanning1__c), 
ISBLANK(Date_when_Step_is_setPlanning2__c), 
ISBLANK(Date_when_Step_is_setPlanning3__c), 
ISBLANK(Date_when_Step_is_setPlanning4__c), 
ISBLANK(Date_when_Step_is_setExecution1__c),
ISBLANK(Date_when_Step_is_setExecution2__c),
ISBLANK(Date_when_Step_is_setExecution3__c),
ISBLANK(Date_when_Step_is_setExecution4__c),
ISBLANK(Date_when_Step_is_setExecution5__c),
ISBLANK(TEXT(Option1_NQual__c)), 
ISBLANK(TEXT(Option2_NQual__c)), 
ISBLANK(TEXT(Option_1Planning__c)), 
ISBLANK(TEXT(Option_2Planning__c)), 
ISBLANK(TEXT(Option_3Planning__c)), 
ISBLANK(TEXT(Option_1Execution__c)),
ISBLANK(TEXT(Option_2Execution__c)),
ISBLANK(TEXT(Option_3Execution__c)),
ISBLANK(TEXT(Option_4Execution__c)),
ISBLANK(TEXT(Option_5Execution__c)),
ISBLANK(TEXT(Option_4Planning__c))))</errorConditionFormula>
        <errorMessage>Please answer the Previous section questionnaire In order to save. Please make sure all  the Date fields are filled in Previous sections.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_Check</fullName>
        <active>true</active>
        <description>R4 Record Lock Check based on Initiative Status value</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
OR(ISPICKVAL(Product_Qualification__r.Initiative_Status__c, &quot;Closed Qualified&quot;),
ISPICKVAL(Product_Qualification__r.Initiative_Status__c,&quot;Closed Not Qualified&quot;)), 
IF( ISNEW()  ,true, false))</errorConditionFormula>
        <errorMessage>You cannot save the changes as Product Qualification Status is Closed.</errorMessage>
    </validationRules>
</CustomObject>